@@ -31,11 +31,11 @@ code,pre {
 	display: none;
 }
 
-#ads {
+#subtabs {
 	display: none;
 }
 
-#nav {
+#ads {
 	display: none;
 }
 
